--- a/form.html
+++ b/form.html
@@ -56,6 +56,7 @@
     });
 
     document.getElementById('submit').addEventListener('click', function (event) {
+      window.location.href="follower.html";
       event.preventDefault();
       // use a loop over form fields
       let instagram = document.getElementById('instagram').value;
