follower.html formel
added formel für % ausrechnen (up/down)

--- a/follower.html
+++ b/follower.html
@@ -12,10 +12,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Comforter+Brush&display=swap" rel="stylesheet">
     <title> TC | The Collector </title>
   <link rel="stylesheet" href="style.css">
+
+  
 </head>
 
 <body>
   <h1>TODO</h1>
+
+  <!--Calculating % of follower up or down
+    Die vorherigen follower müssten zwischengespeichert werden. 
+    Formel: Final value - starting value. then divide that amount by the absolute value of the starting value, then multible by 100 to get percent increase.
+
+    Beispiel: Account hatte 100 Follower und nun hat er 120 Follower.
+    120follower - 100follower = 20follower, 20/100 = 0.2% , 0.2% x100 = 20% up 
+    Dieser Account hat 20% mehr Follower. 
+
+
+-->
 </body>
 
 </html>
