--- a/follower.html
+++ b/follower.html
@@ -10,14 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Comforter+Brush&display=swap" rel="stylesheet">
-    <title> TC | The Collector </title>
+    <title> The Collector|TC </title>
   <link rel="stylesheet" href="style.css">
 
   
 </head>
 
 <body>
-  <h1>TODO</h1>
+  <h1>Your Collection Of Followers</h1>
 
   <!--Calculating % of follower up or down
     Die vorherigen follower müssten zwischengespeichert werden. 
