--- a/form.html
+++ b/form.html
@@ -22,20 +22,7 @@
   <h1>The Collector</h1>
   <p class="text">All your follower in one place</p>
 
-
-  <form id="AccountNameFields">
-    <!-- generator form fields using db.json -->
-    <!--<div class="flexbox">
-      <label for="instagram">Instagram*:</label>
-      <input type="text" id="instagram" name="instagram">
-    </div>-->
-
-
-   
-
-  </form>
-  
-  
+  <div id="content"></div>
 
   <p class="text0">One World One Place</p>
   <p class="explanation"> * Enter your nickname in the relevant fields and confirm with show</p>
@@ -54,7 +41,7 @@
       var html;
 
       arg.forEach(element => {
-        html += "<div class=\"flexbox\"><label for=" + element + ">" + element + "*:</label><input \" type=\"text\" id=" + element + " name=\"element\"></div>"
+        html += "<form id=\"AccountNameFields\"><div class=\"flexbox\"><label for=" + element + ">" + element + "*:</label><input \" type=\"text\" id=" + element + " name=\"element\"></div></form>"
       });
 
       html += "<div class=\"flexbox1\"><button id=\"submit\">show</button></div>";
@@ -64,7 +51,7 @@
       //foreach arg => element { element(element = plattform name)}
       //</form>
       
-      document.getElementById('AccountNameFields').innerHTML = html;
+      document.getElementById('content').innerHTML = html;
      // arg.forEach(element => 
             
       //)
@@ -96,9 +83,17 @@
     });
 
     ipcRenderer.on('get-followers-reply', (event, arg) => {
-      document.getElementById("AccountNameFields").id = "hidden"
       //display hidden -> id bevor_eingabe
       //todo the visualisation of arg
+      let content = "";
+      arg.plattform.forEach(element => {
+        element.name;
+        element.account;
+        element.follower;
+
+      });
+
+      document.getElementById("content").innerHTML = content;
     });
 
   </script>
