--- a/form.html
+++ b/form.html
@@ -86,8 +86,8 @@
       var content = "";
       arg.forEach(element => {
         content += "<div class=\"element-output\">";
-        content += "<div class=\"plattform\">" + element.name + "</div>";
-        content += "<div class=\"account\">" + element.account + "</div>";
+        content += "<div class=\"plattform\">" + element.name + ":" + "</div>";
+        //content += "<div class=\"account\">" + element.account + "</div>";
         content += "<div class=\"follower\">" + element.follower + "</div>";
         content += "</div>"
       });
