--- a/form.html
+++ b/form.html
@@ -104,7 +104,7 @@
         content += "<div class=\"element-output\">";
         content += "<div class=\"plattform\">" + element.name + ":" + "</div>";
         //content += "<div class=\"account\">" + element.account + "</div>";
-        content += "<div class=\"follower\">" + element.follower + "</div>";
+        content += "<div class=\"follower\">" + element.follower.toLocaleString('de-DE') + "</div>"; 
         content += "</div>"
       });
 
