--- a/collector.html
+++ b/collector.html
@@ -17,17 +17,21 @@
 </head>
 
 <body>
-  <!-- <div id="Alien">
-    <img class="Alien" src="img/Domcake-Dancing-Alien.gif" alt="Dancing Alien">
-  </div>-->
+ 
 
   <h1>The Collector</h1>
   <p class="text">All your follower in one place</p>
   
   <div id="content"></div>
+  <div id="Alien">
+    <img class="Alien" src="img/Domcake-Dancing-Alien.gif" alt="Dancing Alien">
+  </div>
   
 
   <p class="text0">One World One Place</p>
+
+ 
+
   <p class="explanation"> * Enter your nickname in the relevant fields and confirm with show</p>
 
   <p class="copy">&copy; Claudio/Alexander/Yassine</p>
