--- a/collector.html
+++ b/collector.html
@@ -21,7 +21,7 @@
 
 
   <h1>The Collector</h1>
-  <p class="text">All your follower in one place</p>
+  <p class="text">All your followers in one place</p>
 
   <div id="content"></div>
 
