--- a/collector.html
+++ b/collector.html
@@ -51,8 +51,7 @@
 
       html += "<div class=\"flexbox1\"><button id=\"submit\">show</button></div>";
 
-      html +=
-        "</form>  <p class=\"text0\">One World One Place</p><p class=\"explanation\"> * Enter your nickname in the relevant fields and confirm with show</p>";
+      html += "</form>  <p class=\"text0\">One World One Place</p><p class=\"explanation\"> * Enter your nickname in the relevant fields and confirm with show</p>";
 
       document.getElementById('content').innerHTML = html;
 
@@ -97,11 +96,9 @@
         content += "</div>"
       });
 
-      content +=
-        "<div class=\"flexbox1\"><button id=\"reset\">reset</button></div><p class=\"text0\">One World One Place</p>";
+      content += "<div class=\"flexbox1\"><button id=\"reset\">reset</button></div><p class=\"text0\">One World One Place</p>";
 
-      content +=
-        "<div id=\"Alien\"><img class=\"Alien\" src=\"img/Domcake-Dancing-Alien.gif\" alt=\"Dancing Alien\"></div>";
+      content += "<div id=\"Alien\"><img class=\"Alien\" src=\"img/Domcake-Dancing-Alien.gif\" alt=\"Dancing Alien\"></div>";
 
       document.getElementById("content").innerHTML = content;
 
